--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dizews/yii2-qunit",
+    "name": "dizews/yii2-qunit-module",
     "description": "The QUnit extension for the Yii framework",
     "keywords": ["yii2", "qunit", "unit", "test"],
     "type": "yii2-extension",
