--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "dizews/yii2-qunit-module",
+    "name": "dizews/yii2-qunit",
     "description": "The QUnit extension for the Yii framework",
     "keywords": ["yii2", "qunit", "unit", "test"],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "support": {
-        "issues": "https://github.com/dizews/yii2-qunit-module/issues?state=open",
-        "source": "https://github.com/dizews/yii2-qunit-module"
+        "issues": "https://github.com/dizews/yii2-qunit/issues?state=open",
+        "source": "https://github.com/dizews/yii2-qunit"
     },
     "authors": [
         {
